RESOLVED FIXED170202
ApplePayShippingContactUpdate.idl shouldn't have status field
https://bugs.webkit.org/show_bug.cgi?id=170202
Summary ApplePayShippingContactUpdate.idl shouldn't have status field
Anders Carlsson
Reported 2017-03-28 14:32:01 PDT
ApplePayShippingContactUpdate.idl shouldn't have status field
Attachments
Patch (3.69 KB, patch)
2017-03-28 14:35 PDT, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2017-03-28 14:35:36 PDT
Anders Carlsson
Comment 2 2017-03-28 15:26:29 PDT
Note You need to log in before you can comment on or make changes to this bug.