ApplePayShippingContactUpdate.idl shouldn't have status field https://bugs.webkit.org/show_bug.cgi?id=170202 rdar://problem/31307106

Reviewed by Beth Dakin.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::convertAndValidate):
If status isn't set, infer it based on whether there are errors present or not.

* Modules/applepay/ApplePayShippingContactUpdate.h:
Make status optional here; it's still used by the old code path.

* Modules/applepay/ApplePayShippingContactUpdate.idl:
Remove status here.

Canonical link: https://commits.webkit.org/187124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214499 268f45cc-cd09-0410-ab3c-d52691b4dbfc