Source/WebCore/Modules/applepay/ApplePayShippingContactUpdate.h
@@ -34,7 +34,7 @@
 namespace WebCore {
 
 struct ApplePayShippingContactUpdate {
-    unsigned short status;
+    std::optional<unsigned short> status;
     Vector<RefPtr<ApplePayError>> errors;
 
     Vector<ApplePayShippingMethod> newShippingMethods;
